import {ReactNativeModal} from './modal';

export {ModalProps, ReactNativeModal, OnSwipeCompleteParams} from './modal';
export {
  AnimationEvent,
  Animations,
  SupportedAnimation,
  Orientation,
  Direction,
  PresentationStyle,
  OnOrientationChange,
  GestureResponderEvent,
} from './types';

export default ReactNativeModal;
